# pmr-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/command/: add.rs  error.rs  init.rs  mod.rs  open.rs
src/config/: choices.rs  list.rs  mod.rs  read.rs  write.rs
src/resource/: linked.rs  mod.rs  named.rs  read.rs  write.rs
