[package]
name = "pmr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive", "cargo"] }
open = "3.2.0"
serde = "1.0.147"
serde_derive = "1.0.147"
slug = "0.1.4"
toml = "0.5.9"
question = "0.2.2"
colored = "2.0.0"
