[package]
name = "pmr"
description = "A small project management CLI utility, to store project management related links."
version = "0.1.0"
author = ["Jascha van Aalst"]
repository = "https://github.com/jascha030/pmr-rs"
homepage = "https://github.com/jascha030/pmr-rs"
edition = "2021"
license = "MIT"
license_file = "LICENSE"
keywords = ["CLI", "project", "management", "TOML"]
categories = ["command-line-utilities"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive", "cargo"] }
open = "5.0.0"
serde = "1.0.147"
serde_derive = "1.0.147"
slug = "0.1.4"
toml = "0.8.15"
question = "0.2.2"
colored = "2.0.0"
dialoguer = "0.11.0"
